--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ google-auth>=2.30.0
 
 python-dotenv>=1.0.1
 PyYAML>=6.0.1
+
+# Added for async HTTP requests (used by CV Generation service or async orchestrator)
+httpx>=0.27.0
